[package]
name = "difig"
version = "0.2.0"
edition = "2024"
description = "Digital Investigation & Forensics Intelligence Gear - Advanced forensic analysis tool"
authors = ["difig Developers"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
tokio = { version = "1.35", features = ["full"] }
indicatif = "0.17"
rayon = "1.8"
tempdir = "0.3"
base64 = "0.21"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
